--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-vertical-timeline-component": "^3.6.0",
+    "surge": "^0.23.1",
     "three": "^0.162.0",
     "use": "^3.1.1"
   },
